Burning man 2011 article to markdown. Wrap blog posts in article tag. IMG CSS fix

--- a/app/assets/css/screen.styl
+++ b/app/assets/css/screen.styl
@@ -299,6 +299,11 @@ p.reverse
     margin 0
 
 ////////// Blog //////////
+article
+  img, iframe
+    display block
+    margin pad4 0
+
 nav.blog
   form
     display inline-block
